--- a/contacto.html
+++ b/contacto.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/navEstilos.css">
     <link rel="stylesheet" href="css/estillos2.css">
     <link rel="stylesheet" href="css/estilosContact.css">
+    <script src="js/scrollreveal.js"></script>
     <title>Contacto - Riley Gas</title>
 </head>
 <body>
