--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/navEstilos.css">
+    <script src="js/scrollreveal.js"></script>
     <title>Riley Gas</title>
 </head>
 <body>
@@ -282,5 +283,6 @@
     </footer>
     
     <script src="js/app.js"></script>
+    <script src="js/anime.js"></script>
 </body>
 </html>
