--- a/instalaciones.html
+++ b/instalaciones.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/navEstilos.css">
     <link rel="stylesheet" href="css/estillos2.css">
+    <script src="js/scrollreveal.js"></script>
     <title>Instalaciones - Riley Gas</title>
 </head>
 <body>
@@ -225,5 +226,6 @@
     </footer>
     
     <script src="js/app.js"></script>
+    <script src="js/anime.js"></script>
 </body>
 </html>
