--- a/servicios.html
+++ b/servicios.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/navEstilos.css">
     <link rel="stylesheet" href="css/estillos2.css">
     <link rel="stylesheet" href="css/estilosContact.css">
+    <script src="js/scrollreveal.js"></script>
     <title>Servicios - Riley Gas</title>
 </head>
 <body>
@@ -205,5 +206,6 @@
     </footer>
     
     <script src="js/app.js"></script>
+    <script src="js/anime.js"></script>
 </body>
 </html>
